# IsThisStockGood

./: .dockerignore  .gitignore  AGENTS.md  AI Improvement Prompts.md  Dockerfile  FIXING-IMPORTS.md  Makefile  README.md  UV-SETUP-GUIDE.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  main.py  plan.md  pyproject.toml  run_locally.sh  testing-guide.md
.github/workflows/: python-app.yml
app/: CompanyInfo.py  DataFetcher.py  FinancialDataFetcher.py  RuleOneInvestingCalculations.py  YFinanceData.py  server.py
docs/: API.md
examples/: world_indices_fetcher.py
isthisstockgood/: CompanyInfo.py  DataFetcher.py  IdentifierResolver.py  RuleOneInvestingCalculations.py  __init__.py  config.py  i18n.py  server.py
isthisstockgood/Active/: MSNMoney.py  alphavantage_client.py  yfinance_client.py
isthisstockgood/static/css/: main.css
isthisstockgood/static/js/: home.js  popup-loading.js
isthisstockgood/templates/: base.html  financial_visualization.html  footer.html  header.html  home.html  loading.html  management.html  margin_of_safety.html  market_cap.html  meaning.html  moat.html  payback_time.html  searchbox.html  ten_cap.html
isthisstockgood/templates/js/: search.js
isthisstockgood/templates/json/: stock_data.json
isthisstockgood/tests/: test_DataSources.py
magic-formula/: build_ticker_list.py  example_usage.py  magic_formula.py
magic_formula/: __init__.py  world_indices.py
src/isthisstockgood/: CompanyInfo.py  server.py
src/tests/: __init__.py  test_RuleOneInvestingCalculations.py  test_yfinance_data.py
tests/: conftest.py  test_DataSources.py  test_MSNMoney.py  test_RuleOneInvestingCalculations.py  test_api.py  test_financial_fetcher.py  test_identifier_resolver.py  test_integration_data_flow.py  test_payback_time_calculation.py  test_performance_data_fetching.py  test_request_throttling.py  test_world_indices_fetcher.py
tests/data/: alphavantage_fundamentals.json  msn_annual_statements.json  msn_autocomplete.json  msn_key_ratios.json  msn_quotes.json  yahoo_analysis.html  yfinance_profile.json  zacks_analysis.html
tools/: deploy_via_ssh.sh  run_tests_with_coverage.py
