[project]
name = "IsThisStockGood"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
  { name = "Marco Janker and AI" }
]
dependencies = [
  "wheel>=0.43.0",
  "lxml>=5.2.2",
  "flask>=3.0.3",
  "pygments>=2.19.2",
  "iniconfig>=2.1.0",
  "pytest>=8.3.5",
  "packaging>=25.0",
  "numpy>=2.0.2",
  "pandas>=2.2.3",
  "requests>=2.32.3",
  "yfinance>=0.2.52",
]

[dependency-groups]
dev = [
  "pytest>=8.2.1"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["isthisstockgood*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.pylint]
indent-string="  "

[tool.pylint.messages_control]
disable = [
  "missing-docstring",
  "invalid-name",
]
