[project]
name = "isthisstockgood"
version = "2.0.0"
description = "Flask web app to analyze stocks using Rule #1 investing principles with yfinance data"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "IsThisStockGood Team" }
]
keywords = ["stocks", "finance", "yfinance", "flask", "investing", "rule-one"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
]

dependencies = [
    "flask>=3.1.2",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.66",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "black>=25.9.0",
    "ruff>=0.14.3",
    "mypy>=1.18.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.uv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
